card verification,  api v2

--- a/app_admin/templates/admin_home.html
+++ b/app_admin/templates/admin_home.html
@@ -120,6 +120,7 @@
 <script>
    // Set new default font family and font color to mimic Bootstrap's default styling
 
+   alert('{% url "api_v2:view_payments-get-amount-sum" %}')
    function number_format(number, decimals, dec_point, thousands_sep) {
       // *     example: number_format(1234.56, 2, ',', ' ');
       // *     return: '1 234,56'
