fixing verify card

--- a/app_public/templates/sst/verify.html
+++ b/app_public/templates/sst/verify.html
@@ -249,7 +249,7 @@ Certificate Verification | pdhsafety.com
                             {{#if completed_date}}
                             Completion Date: {{completed_date}}
                             {{else}}
-                            <div class="text-danger">Completion Date: Not Found</div>
+                            <text class="text-danger">Completion Date: Not Found</text>
                             {{/if}}
                            </span>
                         </li>
