--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -95,8 +95,8 @@
                            <a class="nav-link" href="{% url 'student_taken_quiz' %}"> Quizzes </a>
                         </li>
 
-                        <li class="nav-item d-none">
-                           <a class="nav-link" href="{% url 'student_edit_profile' %}"> Orders </a>
+                        <li class="nav-item">
+                           <a class="nav-link" href="{% url 'student_purchase_history' %}"> Purchase History </a>
                         </li>
 
                         <li class="nav-item">
