--- a/app_cart/templates/checkout.html
+++ b/app_cart/templates/checkout.html
@@ -198,8 +198,8 @@ Checkout | pdhsafety.com
 
 {% block scripts %}
 
-{% comment %} <script src="https://www.paypal.com/sdk/js?client-id={% settings_value 'PAYPAL_CLIENT_ID' %}"></script> {% endcomment %}
-<script src="https://www.paypal.com/sdk/js?client-id={% settings_value 'PAYPAL_CLIENT_ID_SANDBOX' %}"></script>
+<script src="https://www.paypal.com/sdk/js?client-id={% settings_value 'PAYPAL_CLIENT_ID' %}"></script>
+{% comment %} <script src="https://www.paypal.com/sdk/js?client-id={% settings_value 'PAYPAL_CLIENT_ID_SANDBOX' %}"></script> {% endcomment %}
 
 <script>
     (function ($) {
