--- a/app_admin/templates/admin_base.html
+++ b/app_admin/templates/admin_base.html
@@ -3,12 +3,15 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <meta charset="utf-8" />
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>NYC - Admin {% block title %}{% endblock %}</title>
 
       <link rel="icon" type="image/png" href="{% static 'edutim/images/logo100.png' %}" />
 
       <link href="{% static '/sb-admin/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css" />
+      
       <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
 
       <!-- Custom styles for this template-->
@@ -21,6 +24,8 @@
    </head>
 
    <body id="page-top">
+
+    
       <div id="wrapper">
          <!-- Sidebar -->
          <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
@@ -62,6 +67,14 @@
                <a class="nav-link" href="{% url 'admin_students' %}">
                   <i class="fas fa-fw fa-users"></i>
                   <span>Students</span></a
+               >
+            </li>
+
+            <!-- Nav Item - Orders -->
+            <li class="nav-item">
+               <a class="nav-link" href="{% url 'admin_orders' %}">
+                  <i class="fas fa-fw fa-shopping-cart"></i>
+                  <span>Orders</span></a
                >
             </li>
 
@@ -137,6 +150,9 @@
                   <ul class="navbar-nav">
                      <li class="nav-item">
                         <a class="nav-link text-dark" href="{% url 'admin_students' %}"> <i class="fas fa-users fa-fw mr-2"></i> Students </a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link text-dark" href="{% url 'admin_orders' %}"> <i class="fas fa-shopping-cart fa-fw mr-2"></i> Orders </a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link text-dark" href="{% url 'admin_students' %}"> <i class="fas fa-network-wired fa-fw mr-2"></i> Staff </a>
