--- a/app_admin/templates/admin_home.html
+++ b/app_admin/templates/admin_home.html
@@ -1,4 +1,6 @@
-{% extends "admin_base.html" %} {% block title %}{% endblock %}
+{% extends "admin_base.html" %}
+
+{% block title %}{% endblock %}
 
 {% block head %}
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -16,13 +18,13 @@
    <!-- Content Row -->
    <div class="row">
       <div class="col-xl-3 col-md-6 mb-4">
-         <div class="card border-left-success shadow h-100 py-2">
+         <div class="card border-left-primary shadow h-100 py-2">
             <div class="card-body">
                <div class="row no-gutters align-items-center">
                   <div class="col mr-2">
                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                         {% now "F" %} Earnings</div>
-                     <div class="h5 mb-0 font-weight-bold text-gray-800">$[[currentMonthEarnings]]</div>
+                     <div class="h5 mb-0 font-weight-bold text-gray-800">$[[earnings.this_month]]</div>
                   </div>
                   <div class="col-auto">
                      <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -34,12 +36,12 @@
       <!-- Earnings (Monthly) -->
 
       <div class="col-xl-3 col-md-6 mb-4">
-         <div class="card border-left-success shadow h-100 py-2">
+         <div class="card border-left-primary shadow h-100 py-2">
             <div class="card-body">
                <div class="row no-gutters align-items-center">
                   <div class="col mr-2">
                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Total Earnings</div>
-                     <div class="h5 mb-0 font-weight-bold text-gray-800">$[[totalEarnings]]</div>
+                     <div class="h5 mb-0 font-weight-bold text-gray-800">$[[earnings.total]]</div>
                   </div>
                   <div class="col-auto">
                      <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -55,12 +57,12 @@
             <div class="card-body">
                <div class="row no-gutters align-items-center">
                   <div class="col mr-2">
-                     <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                        {% now "F" %} Enrollments</div>
-                     <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                     <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                        {% now "F" %} Enrollments (Paid)</div>
+                     <div class="h5 mb-0 font-weight-bold text-gray-800">[[enrollments.this_month]]</div>
                   </div>
                   <div class="col-auto">
-                     <i class="fas fa-shopping-cart fa-2x text-gray-300"></i>
+                     <i class="fas fa-users fa-2x text-gray-300"></i>
                   </div>
                </div>
             </div>
@@ -73,17 +75,88 @@
             <div class="card-body">
                <div class="row no-gutters align-items-center">
                   <div class="col mr-2">
-                     <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Total Enrollments</div>
-                     <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                     <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Total Enrollments (Paid)</div>
+                     <div class="h5 mb-0 font-weight-bold text-gray-800">[[enrollments.total]]</div>
                   </div>
                   <div class="col-auto">
-                     <i class="fas fa-shopping-cart fa-2x text-gray-300"></i>
+                     <i class="fas fa-users fa-2x text-gray-300"></i>
                   </div>
                </div>
             </div>
          </div>
       </div>
+
       <!-- Orders (Total) -->
+   </div>
+
+   <div class="row">
+      <div class="col-xl-3 col-md-6 mb-4">
+         <div class="card border-left-success shadow h-100 py-2">
+            <div class="card-body">
+               <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                     <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                        {% now "F" %} Orders</div>
+                     <div class="h5 mb-0 font-weight-bold text-gray-800">[[orders.this_month]]</div>
+                  </div>
+                  <div class="col-auto">
+                     <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="col-xl-3 col-md-6 mb-4">
+         <div class="card border-left-success shadow h-100 py-2">
+            <div class="card-body">
+               <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                     <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                        Total Orders</div>
+                     <div class="h5 mb-0 font-weight-bold text-gray-800">[[orders.total]]</div>
+                  </div>
+                  <div class="col-auto">
+                     <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+
+      <div class="col-xl-3 col-md-6 mb-4">
+         <div class="card border-left-warning shadow h-100 py-2">
+            <div class="card-body">
+               <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                     <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                        {% now "F" %} Enrollments (Free)</div>
+                     <div class="h5 mb-0 font-weight-bold text-gray-800">[[free_enrollments.this_month]]</div>
+                  </div>
+                  <div class="col-auto">
+                     <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+
+      <div class="col-xl-3 col-md-6 mb-4">
+         <div class="card border-left-warning shadow h-100 py-2">
+            <div class="card-body">
+               <div class="row no-gutters align-items-center">
+                  <div class="col mr-2">
+                     <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                        Total Enrollments (Free)</div>
+                     <div class="h5 mb-0 font-weight-bold text-gray-800">[[free_enrollments.total]]</div>
+                  </div>
+                  <div class="col-auto">
+                     <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+
    </div>
 
    <div class="row">
@@ -116,7 +189,36 @@
             </div>
          </div>
       </div>
+      <div class="col-xl-6 col-lg-6">
+         <div class="card shadow mb-4">
+            <!-- Card Header - Dropdown -->
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+               <h6 class="m-0 font-weight-bold text-primary">Paid Enrollments Overview - {% now "F" %}</h6>
+               <div class="dropdown no-arrow">
+                  <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                     aria-haspopup="true" aria-expanded="false">
+                     <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                     aria-labelledby="dropdownMenuLink">
+                     <div class="dropdown-header">Dropdown Header:</div>
+                     <a class="dropdown-item" href="#">Action</a>
+                     <a class="dropdown-item" href="#">Another action</a>
+                     <div class="dropdown-divider"></div>
+                     <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+               </div>
+            </div>
+            <!-- Card Body -->
+            <div class="card-body">
+               <div class="chart-area">
+                  <canvas id="enrollmentsOverviewChart"></canvas>
+               </div>
+            </div>
+         </div>
+      </div>
    </div>
+
 </div>
 
 {% endblock %}
@@ -152,7 +254,7 @@
       return s.join(dec);
    }
 
-   function initEarningChart(dataArray) {
+   function initEarningChart(dataArray, elementId, label, preFormat) {
 
       const dataValues = [];
 
@@ -169,14 +271,14 @@
       })
 
       // Area Chart Example
-      var ctx = document.getElementById("ordersOverviewChart");
+      var ctx = document.getElementById(elementId);
       var myLineChart = new Chart(ctx, {
          type: "line",
          data: {
             labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
             datasets: [
                {
-                  label: "Earnings",
+                  label: label,
                   lineTension: 0.3,
                   backgroundColor: "rgba(78, 115, 223, 0.05)",
                   borderColor: "rgba(78, 115, 223, 1)",
@@ -224,7 +326,7 @@
                         padding: 10,
                         // Include a dollar sign in the ticks
                         callback: function (value, index, values) {
-                           return "$" + number_format(value);
+                           return preFormat + number_format(value);
                         },
                      },
                      gridLines: {
@@ -257,7 +359,7 @@
                callbacks: {
                   label: function (tooltipItem, chart) {
                      var datasetLabel = chart.datasets[tooltipItem.datasetIndex].label || "";
-                     return datasetLabel + ": $" + number_format(tooltipItem.yLabel);
+                     return datasetLabel + ": " + preFormat + number_format(tooltipItem.yLabel);
                   },
                },
             },
@@ -273,13 +375,29 @@
    const app = createApp({
       data() {
          return {
-            message: 'Hello vue!',
-            totalEarnings: 0,
-            currentMonthEarnings: 0
+            message: 'Real Time Data',
+            earnings: {
+               total: 0,
+               this_month: 0
+            },
+            enrollments: {
+               total: 0,
+               this_month: 0
+            },
+            free_enrollments: {
+               total: 0,
+               this_month: 0
+            },
+            orders: {
+               total: 0,
+               this_month: 0
+            },
          }
       },
       mounted() {
-         this.getEarnings()
+         this.getEarnings();
+         this.getEnrollments();
+         this.getOrders();
       },
       methods: {
          getEarnings() {
@@ -287,14 +405,69 @@
             const month = new Date().getMonth() + 1;
             const that = this;
 
-            $.get('{% url "api_v2:view_payments-get-earnings" %}', { year: year }, function (response) {
-               const currentMonth = response.find(a => a.month === month);
-               if (currentMonth)
-                  that.currentMonthEarnings = parseFloat(currentMonth.total).toFixed(2);
+            $.get('{% url "api_v2:view_payments-get-amount-group-count" %}', {}, function (response) {
+               const currentMonth = response.find(a => a.month === month && a.year === year);
 
-               that.totalEarnings = response.reduce((n, { total }) => n + parseFloat(total), 0).toFixed(2);
+               if (currentMonth) {
+                  that.earnings.this_month = parseFloat(currentMonth.total).toFixed(2);
+               }
 
-               initEarningChart(response)
+               that.earnings.total = response.reduce((n, { total }) => n + parseFloat(total), 0).toFixed(2);
+
+               initEarningChart(response, 'ordersOverviewChart', 'Earnings', '$')
+            });
+         },
+
+         getEnrollments() {
+            const year = new Date().getFullYear();
+            const month = new Date().getMonth() + 1;
+            const that = this;
+
+            $.get('{% url "api_v2:view_enrollments-get-group-count" %}', {plan:'paid'}, function (response) {
+
+               const currentMonth = response.find(a => a.month === month && a.year === year);
+
+               if (currentMonth) {
+                  that.enrollments.this_month = parseFloat(currentMonth.total).toFixed(0);
+               }
+
+               that.enrollments.total = response.reduce((n, { total }) => n + parseInt(total), 0).toFixed(0);
+
+               initEarningChart(response, 'enrollmentsOverviewChart', 'Enrollments', '')
+            });
+
+            //free
+
+            $.get('{% url "api_v2:view_enrollments-get-group-count" %}', {plan:'free'}, function (response) {
+
+               const currentMonth = response.find(a => a.month === month && a.year === year);
+
+               if (currentMonth) {
+                  that.free_enrollments.this_month = parseFloat(currentMonth.total).toFixed(0);
+               }
+
+               that.free_enrollments.total = response.reduce((n, { total }) => n + parseInt(total), 0).toFixed(0);
+
+              
+            });
+         },
+
+         getOrders() {
+            const year = new Date().getFullYear();
+            const month = new Date().getMonth() + 1;
+            const that = this;
+
+            $.get('{% url "api_v2:view_orders-get-group-count" %}', {}, function (response) {
+
+               const currentMonth = response.find(a => a.month === month && a.year === year);
+
+                  if (currentMonth) {
+                  that.orders.this_month = parseFloat(currentMonth.total).toFixed(0);
+               }
+
+               that.orders.total = response.reduce((n, { total }) => n + parseInt(total), 0).toFixed(0);
+
+               // initEarningChart(response, 'enrollmentsOverviewChart', 'Enrollments', '')
             });
          }
       },
