--- a/app_cart/templates/checkout.html
+++ b/app_cart/templates/checkout.html
@@ -73,12 +73,18 @@ Checkout | pdhsafety.com
                             <strong class="total-price">$0</strong>
                         </li>
                     </ul>
-                    <div>
-                        <button id="btnPayBank" class="btn btn-block btn-info mb-1">Pay via Bank Transfer</button>
+
+                    <div id="paypal-button-container" class="mt-3">              
                     </div>
+
                     <div class="text-center">
-                        or Pay Online
+                        OR want to pay later?
                     </div>
+
+                    <div>
+                        <button id="btnPayBank" class="btn btn-block btn-info mb-1 d-none">Pay via Bank Transfer</button>
+                    </div>
+                  
 
                     <div id="paypalLoader">
                         
@@ -89,9 +95,7 @@ Checkout | pdhsafety.com
                         Loading payment method. Please wait..
 
                     </div>
-                    <div id="paypal-button-container" class="mt-3">
-                       
-                    </div>
+                  
                 </div>
             </div>
         </div>
@@ -327,6 +331,7 @@ Checkout | pdhsafety.com
 
                 $("#paypalLoader").hide();
 
+                $("#btnPayBank").removeClass('d-none');
             };
 
             var postOrder = function (paymentData) {
