--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -206,7 +206,7 @@
 
             <div class="row">
                 <div class="col text-center">
-                    <img class="lazy" data-src="{% static 'images/money_back.png' %}" width="400" height="293" alt="money back"></div>
+                    <img class="lazy img-fluid" data-src="{% static 'images/money_back.png' %}" width="400" height="293" alt="money back"></div>
                 </div>
             </div>
         </section>
